# starburst-data-product-example

./: .buildinfo  README.md  checker.html  generate_report_pdf.html  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  setup.cfg
.doctrees/: checker.doctree  environment.pickle  generate_report_pdf.doctree  index.doctree  introduction.doctree
.github/workflows/: docs.yml
_sources/: checker.rst.txt  index.rst.txt  introduction.rst.txt
datamesh_checker/classes/: checker.py
datamesh_checker/helpers/: checker.py  string.py
docs_source/source/: conf.py  generate_report_pdf.rst  index.rst
