[metadata]
name = datamesh-oci-checker
version = 0.1.0
author = Gougou Nelson
author_email = nelgoug@gmail.com
description = Package to check oci datamesh entity
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    starburst-python-wrapper @ git+https://github.com/Donutson/starburst_api_python.git
